Fix textarea width and margin
I have added width for textarea and have removed margin as it was causing some layout issues.

--- a/themes/pmahomme/scss/_common.scss
+++ b/themes/pmahomme/scss/_common.scss
@@ -331,7 +331,7 @@ input {
 
 textarea {
   overflow: visible;
-  margin: 6px;
+  width: 100%;
 
   &.char {
     margin: 6px;
